chore: change banner image format from GIF to PNG

--- a/public/exercise-10-designs.html
+++ b/public/exercise-10-designs.html
@@ -27,6 +27,6 @@
 
     <h1>My Designs</h1>
     <img src="../assets/images/banner.jpg" alt="JPEG banner" />
-    <img src="../assets/images/banner.gif" alt="GIF banner" />
+    <img src="../assets/images/banner.png" alt="PNG banner" />
   </body>
 </html>
