--- a/public/exercise-10-designs.html
+++ b/public/exercise-10-designs.html
@@ -20,7 +20,8 @@
       <li><a href="./exercise-11-my-portfolio.html">Home</a> |</li>
       <li><a href="./exercises.html">Exercises</a> |</li>
       <li><a href="./exercise-10-designs.html">Designs</a> |</li>
-      <li><a href="https://www.facebook.com/delacruz.rogivon">Facebook</a></li>
+      <li><a href="https://www.facebook.com/delacruz.rogivon">Facebook |</a></li>
+      <li><a href="./contact-me.html">Contact Me</a></li>
     </ul>
 
     <hr />
