feat: implement navigation and style for contact me page
This commit adds a navigation bar to the contact me page for better user experience. Additionally, it sets a background color for the contact me page to visually distinguish it.

--- a/public/contact-me.html
+++ b/public/contact-me.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Me</title>
+
+    <style>
+       body {
+        background-color: #c1e0ff;
+       } 
+       
+        li {
+            display: inline;
+        }
+    </style>
   </head>
   <body>
+    <ul>
+      <li><a href="./exercise-11-my-portfolio.html">Home</a> |</li>
+      <li><a href="./exercises.html">Exercises</a> |</li>
+      <li><a href="./exercise-10-designs.html">Designs</a> |</li>
+      <li><a href="https://www.facebook.com/delacruz.rogivon">Facebook |</a></li>
+      <li><a href="./contact-me.html">Contact Me</a></li>
+    </ul>
+
+    <hr />
+
     <h1>My Contact Details</h1>
     <p>6551 Dean Cliffs, East Tashiaville, CO 58179-4012</p>
     <p>+63 912 345 6789</p>
