--- a/public/exercise-11-my-portfolio.html
+++ b/public/exercise-11-my-portfolio.html
@@ -27,6 +27,7 @@
   <body>
     <ul>
       <li><a href="./exercise-11-my-portfolio.html">Home</a> |</li>
+      <li><a href="./my-skills.html">Skills</a> |</li>
       <li><a href="./exercises.html">Exercises</a> |</li>
       <li><a href="./exercise-10-designs.html">Designs</a> |</li>
       <li><a href="https://www.facebook.com/delacruz.rogivon">Facebook |</a></li>
