--- a/public/exercises.html
+++ b/public/exercises.html
@@ -14,9 +14,10 @@
       }
     </style>
   </head>
-  <body style="background-color: #c1e0ff">
+  <body>
     <ul>
       <li><a href="./exercise-11-my-portfolio.html">Home</a> |</li>
+      <li><a href="./my-skills.html">Skills</a> |</li>
       <li><a href="./exercises.html">Exercises</a> |</li>
       <li><a href="./exercise-10-designs.html">Designs</a> |</li>
       <li><a href="https://www.facebook.com/delacruz.rogivon">Facebook |</a></li>
